syntax = "proto3";
package masterpb;

import "gogoproto/gogo.proto";
import "meta.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;


service MasterRpc {
    rpc GetRoute(GetRouteRequest) returns (GetRouteResponse) {}

    rpc PSLogin(PSLoginRequest) returns (PSLoginResponse) {}
    rpc PSHeartbeat(PSHeartbeatRequest) returns (PSHeartbeatResponse) {}
    rpc PartitionHeartbeat(PartitionHeartbeatRequest) returns (PartitionHeartbeatResponse) {}
}

message GetRouteRequest {
    metapb.RequestHeader       header          = 1;
    uint32              space           = 2;
    uint32              slot            = 3;
}

message GetRouteResponse {
    metapb.ResponseHeader          header          = 1;
    repeated metapb.Route          routes          = 2;
}

message PSLoginRequest {
    metapb.RequestHeader       header          = 1;
    metapb.PartitionServer     server          = 2;
    metapb.ServerResource      serverResource  = 3;
}

message PSLoginResponse {
    metapb.ResponseHeader      header          = 1;
    metapb.PartitionServer     server          = 2;
}

message PSHeartbeatRequest {
    metapb.RequestHeader       header     = 1;
    uint32              ps_id = 3;
//    metapb.PSStatus            ps_status = 4;
//    repeated  metapb.Replica   replicas = 5;
}

message PSHeartbeatResponse {
    metapb.ResponseHeader      header         = 1;
}

message PartitionHeartbeatRequest {
    metapb.RequestHeader       header     = 1; 
    metapb.Partition           partition  = 2; 
    repeated  metapb.Replica   replicas   = 3; 
    uint32              leader     = 4; 
}

message PartitionHeartbeatResponse {
    metapb.ResponseHeader header = 1;
}
